got soundboard down

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 <body>
     <div class = "view">
+        <p id="curValue"></p>
         
-        <textfield class = "output"></textfield>
     </div>
     <div class = "buttons">
         
